# libpuzzle

./: COPYING  Makefile.am  README  README-PHP  THANKS  aclocal.m4  autogen.sh  composer.json  configure.ac
man/: Makefile.am  libpuzzle.3  puzzle-diff.8  puzzle_set.3
php/: Makefile.am
php/examples/: Makefile.am
php/examples/similar/: Makefile.am  config.inc.php  schema.pgsql.sql  schema.sqlite3.sql  similar.inc.php  similar.php
php/libpuzzle/: CREDITS  LICENSE  Makefile.am  README  config.m4  libpuzzle.c  libpuzzle.php  php_libpuzzle.h
php/libpuzzle/tests/: 001.phpt  002.phpt  003.phpt  Makefile.am
php/libpuzzle/tests/pics/: Makefile.am
src/: Makefile.am  compress.c  cvec.c  dvec.c  globals.h  puzzle-diff.c  puzzle.c  puzzle.h  puzzle_common.h  puzzle_p.h  regress_1.c  regress_2.c  regress_3.c  tunables.c  vector_ops.c
src/pics/: Makefile.am
